- fix name and surname
git-svn-id: http://svn.code.sf.net/p/gperiodic/code/trunk@15 0ad6494c-dd34-4e59-9d04-8dff0e227eb0

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,7 +13,7 @@
    Return German, Spanish, Dutch, Portugese translations from gperiodic-1.3.3
    Add manual from Debian with little changes (Sebastien Bacher and Alexey Loginov)
    Add hicolor icons
-   Add Ukrainian translation (Mishchenko Oleksandr)
+   Add Ukrainian translation (Oleksandr Mishchenko)
    Update Polish translation (Ireneusz Imiolek)
    Update Russian translation (Alexey Loginov)
 
