- update README: "Using a translation"
git-svn-id: http://svn.code.sf.net/p/gperiodic/code/trunk@18 0ad6494c-dd34-4e59-9d04-8dff0e227eb0

--- a/po/README
+++ b/po/README
@@ -72,12 +72,12 @@ Using a translation
 -------------------
 
 A user must have localizations enabled for a translation to be used.
-To enable a localization, the LANG environment variable should be set
+To enable a localization, the LANGUAGE environment variable should be set
 via the command line or the shell login startup files.
 
 For example, to see the Swedish translation, a user should be able to:
 
 From bash:
-	export LANG=sv_SE
+	export LANGUAGE=sv
 or from csh
-	setenv LANG sv_SE
+	setenv LANGUAGE sv
