- update Spanish translation
git-svn-id: http://svn.code.sf.net/p/gperiodic/code/trunk@19 0ad6494c-dd34-4e59-9d04-8dff0e227eb0

--- a/AUTHORS
+++ b/AUTHORS
@@ -28,3 +28,4 @@ Andrea Tasso <andrea@tasso.info>                                      Italian tr
 Osman Köşeli <?>                                                      Turkish translation
 Ireneusz Imiolek <imiolek.i@googlemail.com>                           Polish translation
 Oleksandr Mishchenko <sasha.mishchenko@gmail.com>                     Ukrainian translation
+Juan Rafael Fernández                                                 Spanish translation
