--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,7 @@
    Add Ukrainian translation (Oleksandr Mishchenko)
    Update Polish translation (Ireneusz Imiolek)
    Update Russian translation (Alexey Loginov)
+   Update Spanish translation (Juan Rafael Fernández)
 
 2.0.10 Jul 11 2007
    Minor code update & include translations
