- update Turkish translation
git-svn-id: http://svn.code.sf.net/p/gperiodic/code/trunk@21 0ad6494c-dd34-4e59-9d04-8dff0e227eb0

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,7 @@
    Update Polish translation (Ireneusz Imiolek)
    Update Russian translation (Alexey Loginov)
    Update Spanish translation (Juan Rafael Fernández)
+   Update Turkish translation (Fırat Kutlu)
 
 2.0.10 Jul 11 2007
    Minor code update & include translations
