--- a/AUTHORS
+++ b/AUTHORS
@@ -29,3 +29,4 @@ Osman Köşeli <?>                                                      Turkish 
 Ireneusz Imiolek <imiolek.i@googlemail.com>                           Polish translation
 Oleksandr Mishchenko <sasha.mishchenko@gmail.com>                     Ukrainian translation
 Juan Rafael Fernández                                                 Spanish translation
+Fırat Kutlu <firatkutlu@gmail.com>                                    Turkish translation
