--- a/po/da.po
+++ b/po/da.po
@@ -1,4 +1,4 @@
-# Translation of gperiodic to Dansk.
+# Translation of gperiodic to Danish.
 # This file is distributed under the same license as the gperiodic package.
 # Copyright (C) Gunner Poulsen <?>, 2003.
 #
@@ -9,7 +9,7 @@ msgstr ""
 "POT-Creation-Date: 2014-06-04 21:53+0400\n"
 "PO-Revision-Date: 2014-06-02 14:22+0300\n"
 "Last-Translator: AlexL <loginov.alex.valer@gmail.com>\n"
-"Language-Team: Dansk <dansk@klid.dk>\n"
+"Language-Team: Danish <dansk@klid.dk>\n"
 "Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
