- update all translations
git-svn-id: http://svn.code.sf.net/p/gperiodic/code/trunk@23 0ad6494c-dd34-4e59-9d04-8dff0e227eb0

--- a/AUTHORS
+++ b/AUTHORS
@@ -26,6 +26,7 @@ Gonzalo Regueiro Iglesias <gonzalo.regueiro.iglesias@gmail.com>       Galician t
 Leandro Regueiro <leandro.regueiro@gmail.com>                         Galician translation
 Andrea Tasso <andrea@tasso.info>                                      Italian translation
 Osman Köşeli <?>                                                      Turkish translation
+Frederic Gobry <?>                                                    patches
 Ireneusz Imiolek <imiolek.i@googlemail.com>                           Polish translation
 Oleksandr Mishchenko <sasha.mishchenko@gmail.com>                     Ukrainian translation
 Juan Rafael Fernández                                                 Spanish translation
