--- a/ChangeLog
+++ b/ChangeLog
@@ -211,7 +211,7 @@
 
 1.0.6 Tue Jun 29 13:43:05 EDT 1999
   Mauricio Rivera <rmrivera@hotmail.com> -- provided a translation
-    to Spanish.  Use -l es to have GPeriodic appear in Spansih.
+    to Spanish.  Use -l es to have GPeriodic appear in Spanish.
 
 1.0.5 Thu Jun 24 13:09:52 EDT 1999
   Georges Khaznadar <khazuada@univ-littoral.fr> -- provided translation
