- fix address, translate license
git-svn-id: http://svn.code.sf.net/p/gperiodic/code/trunk@24 0ad6494c-dd34-4e59-9d04-8dff0e227eb0

--- a/po/da.po
+++ b/po/da.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gperiodic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-06-09 12:05+0400\n"
-"PO-Revision-Date: 2014-06-09 12:06+0300\n"
+"POT-Creation-Date: 2014-06-09 15:02+0400\n"
+"PO-Revision-Date: 2014-06-09 15:03+0300\n"
 "Last-Translator: AlexL <loginov.alex.valer@gmail.com>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
 "Language: da\n"
@@ -264,12 +264,25 @@ msgid ""
 "\n"
 "You should have received a copy of the GNU General Public License\n"
 "along with this program; if not, write to the Free Software\n"
-"Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA\n"
+"Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA\n"
 msgstr ""
+"gperiodic er frit programmel; du kan redistribuere og/eller ændre det iht. GNU\n"
+"General Public License som er udgivet af Free Software Foundation; enten\n"
+"version 2 af licensen, eller (efter eget valg) en hvilken som helst\n"
+"efterfølgende version.\n"
+"\n"
+"gperiodic bliver distribueret med det formål, at det skal være til nytte, men\n"
+"UDEN NOGEN FORM FOR GARANTI, heller ingen implicit garanti for SALGBARHED\n"
+"eller EGNETHED TIL NOGEN SPECIEL OPGAVE. Se GNU General Public License for\n"
+"nærmere detaljer.\n"
+"\n"
+"Du burde have modtaget en kopi af licensen GNU General Public License sammen\n"
+"med gperiodic; hvis ikke så skriv til Free Software Foundation, Inc., 51\n"
+"Franklin Street, Fifth Floor, Boston, MA 02110-1301  USA\n"
 
 #: gperiodic.h:105
 msgid "gperiodic homepage"
-msgstr ""
+msgstr "gperiodic hjemmeside"
 
 #: table_data.h:31
 msgid "Name: "
