--- a/po/de.po
+++ b/po/de.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gperiodic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-06-09 12:05+0400\n"
-"PO-Revision-Date: 2014-06-09 12:06+0300\n"
+"POT-Creation-Date: 2014-06-09 15:02+0400\n"
+"PO-Revision-Date: 2014-06-09 15:04+0300\n"
 "Last-Translator: AlexL <loginov.alex.valer@gmail.com>\n"
 "Language-Team: German <de@li.org>\n"
 "Language: de\n"
@@ -250,12 +250,27 @@ msgid ""
 "\n"
 "You should have received a copy of the GNU General Public License\n"
 "along with this program; if not, write to the Free Software\n"
-"Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA\n"
+"Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA\n"
 msgstr ""
+"gperiodic ist freie Software, Sie können sie weitergeben und/oder verändern,\n"
+"solange Sie sich an die Regeln der GNU General Public License halten, so wie\n"
+"sie von der Free Software Foundation festgelegt wurden; entweder in Version\n"
+"2 der Lizenz oder (nach Ihrem Ermessen) in jeder folgenden Version.\n"
+"\n"
+"gperiodic wurde mit dem Ziel veröffentlicht, dass Sie es nützlich finden,\n"
+"jedoch OHNE JEDWEDE GARANTIE, sogar ohne eine implizite Garantie\n"
+"der VERKAUFBARKEIT oder der NUTZBARKEIT FÜR EINEN SPEZIELLEN ZWECK.\n"
+"Schauen Sie für weitere Informationen bitte in der GNU General Public License\n"
+"(GNU GPL) nach.\n"
+"\n"
+"Mit gperiodic sollten Sie außerdem eine Kopie der GNU General Public License\n"
+"erhalten haben. Wenn dem nicht so ist, so schreiben Sie bitte an die Free\n"
+"Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA\n"
+"02110-1301, USA.\n"
 
 #: gperiodic.h:105
 msgid "gperiodic homepage"
-msgstr ""
+msgstr "gperiodic-Webseite"
 
 #: table_data.h:31
 msgid "Name: "
