--- a/po/es.po
+++ b/po/es.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gperiodic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-06-09 12:05+0400\n"
-"PO-Revision-Date: 2014-06-09 12:06+0300\n"
+"POT-Creation-Date: 2014-06-09 15:02+0400\n"
+"PO-Revision-Date: 2014-06-09 15:05+0300\n"
 "Last-Translator: AlexL <loginov.alex.valer@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "Language: es\n"
@@ -269,8 +269,21 @@ msgid ""
 "\n"
 "You should have received a copy of the GNU General Public License\n"
 "along with this program; if not, write to the Free Software\n"
-"Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA\n"
+"Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA\n"
 msgstr ""
+"gperiodic es software libre; puede redistribuirlo y/o modificarlo bajo los\n"
+"términos de la Licencia Pública General GNU tal como la publica la Free\n"
+"Software Foundation; ya sea en la versión 2 de la Licencia, o (a su opción)\n"
+"cualquier versión posterior.\n"
+"\n"
+"gperiodic se distribuye con el propósito de que le sea útil, pero SIN NINGUNA\n"
+"GARANTÍA; sin incluso la garantía implícita de MERCANTILIDAD o IDONEIDAD\n"
+"PARA UN PROPÓSITO DETERMINADO. Vea la Licencia Pública General de GNU para\n"
+"más detalles.\n"
+"\n"
+"Debería haber recibido una copia de la Licencia Pública General de GNU junto\n"
+"con gperiodic; si no es así, escriba a la Free Software Foundation, Inc, 51\n"
+"Franklin Street, Fifth Floor, Boston, MA 02110-1301, EE. UU.\n"
 
 #: gperiodic.h:105
 msgid "gperiodic homepage"
