--- a/po/fr.po
+++ b/po/fr.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gperiodic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-06-09 12:05+0400\n"
-"PO-Revision-Date: 2014-06-09 12:06+0300\n"
+"POT-Creation-Date: 2014-06-09 15:02+0400\n"
+"PO-Revision-Date: 2014-06-09 15:05+0300\n"
 "Last-Translator: AlexL <loginov.alex.valer@gmail.com>\n"
 "Language-Team: French <LL@li.org>\n"
 "Language: fr\n"
@@ -250,12 +250,25 @@ msgid ""
 "\n"
 "You should have received a copy of the GNU General Public License\n"
 "along with this program; if not, write to the Free Software\n"
-"Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA\n"
+"Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA\n"
 msgstr ""
+"gperiodic est un logiciel libre ; vous pouvez le redistribuer et/ou le\n"
+"modifier au titre des clauses de la Licence Publique Générale GNU, telle que\n"
+"publiée par la Free Software Foundation ; soit la version 2 de la Licence,\n"
+"ou (à votre discrétion) une version ultérieure quelconque.\n"
+"\n"
+"gperiodic est distribué dans l'espoir qu'il sera utile, mais SANS AUCUNE\n"
+"GARANTIE ; sans même une garantie implicite de COMMERCIABILITÉ ou DE\n"
+"CONFORMITÉ À UNE UTILISATION PARTICULIÈRE. Voir la Licence Publique Générale\n"
+"GNU pour plus de détails.\n"
+"\n"
+"Vous devriez avoir reçu un exemplaire de la Licence Publique Générale GNU\n"
+"avec ce programme ; si ce n'est pas le cas, écrivez à la Free Software\n"
+"Foundation Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.\n"
 
 #: gperiodic.h:105
 msgid "gperiodic homepage"
-msgstr ""
+msgstr "Site Web de gperiodic"
 
 #: table_data.h:31
 msgid "Name: "
