--- a/po/it.po
+++ b/po/it.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gperiodic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-06-09 12:05+0400\n"
-"PO-Revision-Date: 2014-06-09 12:14+0300\n"
+"POT-Creation-Date: 2014-06-09 15:02+0400\n"
+"PO-Revision-Date: 2014-06-09 15:06+0300\n"
 "Last-Translator: AlexL <loginov.alex.valer@gmail.com>\n"
 "Language-Team: Italian <debian-l10n-italian@lists.debian.org>\n"
 "Language: it\n"
@@ -250,12 +250,24 @@ msgid ""
 "\n"
 "You should have received a copy of the GNU General Public License\n"
 "along with this program; if not, write to the Free Software\n"
-"Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA\n"
+"Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA\n"
 msgstr ""
+"gperiodic è software libero; è lecito redistribuirlo o modificarlo secondo i\n"
+"termini della GNU General Public License come pubblicata dalla Free Software\n"
+"Foundation; o la versione 2 o (a propria scelta) una versione successiva.\n"
+"\n"
+"gperiodic è distribuito nella speranza che sia utile, ma SENZA ALCUNA\n"
+"GARANZIA; senza neppure la garanzia implicita di NEGOZIABILITÀ o di\n"
+"APPLICABILITÀ PER UN PARTICOLARE SCOPO. Si veda la licenza GNU General\n"
+"Public License per maggiori dettagli.\n"
+"\n"
+"Questo programma deve essere distribuito assieme a una copia della GNU\n"
+"General Public License; in caso contrario, scrivere alla Free Software\n"
+"Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA\n"
 
 #: gperiodic.h:105
 msgid "gperiodic homepage"
-msgstr ""
+msgstr "Sito web di gperiodic"
 
 #: table_data.h:31
 msgid "Name: "
