--- a/po/sv.po
+++ b/po/sv.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gperiodic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-06-09 12:05+0400\n"
-"PO-Revision-Date: 2014-06-09 12:07+0300\n"
+"POT-Creation-Date: 2014-06-09 15:02+0400\n"
+"PO-Revision-Date: 2014-06-09 15:08+0300\n"
 "Last-Translator: AlexL <loginov.alex.valer@gmail.com>\n"
 "Language-Team: Swedish <LL@li.org>\n"
 "Language: sv\n"
@@ -263,12 +263,24 @@ msgid ""
 "\n"
 "You should have received a copy of the GNU General Public License\n"
 "along with this program; if not, write to the Free Software\n"
-"Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA\n"
+"Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA\n"
 msgstr ""
+"gperiodic är fri programvara. Du kan distribuera det och/eller modifiera det\n"
+"under villkoren i GNU General Public License, publicerad av Free Software\n"
+"Foundation, antingen version 2 eller (om du så vill) någon senare version.\n"
+"\n"
+"gperiodic distribueras i hopp om att det ska vara användbart, men UTAN NÅGON\n"
+"SOM HELST GARANTI, även utan underförstådd garanti om SÄLJBARHET eller\n"
+"LÄMPLIGHET FÖR NÅGOT SPECIELLT ÄNDAMÅL. Se GNU General Public License för\n"
+"ytterligare information.\n"
+"\n"
+"Du bör ha fått en kopia av GNU General Public License tillsammans med\n"
+"gperiodic. Om inte, skriv till Free Software Foundation, Inc., 51 Franklin\n"
+"Street, Fifth Floor, Boston, MA 02110-1301, USA\n"
 
 #: gperiodic.h:105
 msgid "gperiodic homepage"
-msgstr ""
+msgstr "gperiodic webbplats"
 
 #: table_data.h:31
 msgid "Name: "
