--- a/po/tr.po
+++ b/po/tr.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gperiodic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-06-09 12:05+0400\n"
-"PO-Revision-Date: 2014-06-09 12:08+0300\n"
+"POT-Creation-Date: 2014-06-09 15:02+0400\n"
+"PO-Revision-Date: 2014-06-09 15:08+0300\n"
 "Last-Translator: AlexL <loginov.alex.valer@gmail.com>\n"
 "Language-Team: Turkish <biltek2004@yahoogroups.com>\n"
 "Language: tr\n"
@@ -270,7 +270,7 @@ msgid ""
 "\n"
 "You should have received a copy of the GNU General Public License\n"
 "along with this program; if not, write to the Free Software\n"
-"Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA\n"
+"Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA\n"
 msgstr ""
 "gperiodic özgür yazılımdır; dağıtabilir ve/veya değiştirebilirsiniz\n"
 "program, özgür yazılım vakfı tarafından yayınlanan GNU genel kamu\n"
@@ -283,8 +283,8 @@ msgstr ""
 "Daha fazla ayrıntı için GNU genel kamu lisansına bakın.\n"
 "\n"
 "Bu programla birlikte GNU Genel Kamu Lisansı'nın bir kopyasını almış\n"
-"olmanız gerekir; aksi halde özgür yazılım vakfına yazın\n"
-"Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA\n"
+"olmanız gerekir; aksi halde özgür yazılım vakfına yazın Foundation,\n"
+"Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA\n"
 
 #: gperiodic.h:105
 msgid "gperiodic homepage"
