--- a/po/gl.po
+++ b/po/gl.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gperiodic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-06-09 12:05+0400\n"
-"PO-Revision-Date: 2014-06-09 12:07+0300\n"
+"POT-Creation-Date: 2014-06-09 15:02+0400\n"
+"PO-Revision-Date: 2014-06-09 15:05+0300\n"
 "Last-Translator: AlexL <loginov.alex.valer@gmail.com>\n"
 "Language-Team: Galician <LL@li.org>\n"
 "Language: gl\n"
@@ -250,12 +250,24 @@ msgid ""
 "\n"
 "You should have received a copy of the GNU General Public License\n"
 "along with this program; if not, write to the Free Software\n"
-"Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA\n"
+"Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA\n"
 msgstr ""
+"O gperiodic é software libre, pode redistribuílo ou modificalo baixo os termos\n"
+"da Licenza pública xeral GNU tal como a publica a Free Software Foundation;\n"
+"tanto na versión 2 da Licenza como (segundo o seu criterio) en calquera\n"
+"versión posterior.\n"
+"\n"
+"O gperiodic distribúese esperando que sexa útil, mais SEN NINGUNHA GARANTÍA;\n"
+"mesmo sen a garantía implícita de VALOR COMERCIAL ou ADECUACIÓN PARA UN\n"
+"PROPÓSITO PARTICULAR. Para máis detalles vexa a Licenza pública xeral GNU.\n"
+"\n"
+"Debeu recibir unha copia da Licenza pública xeral GNU xunto co Brasero; en\n"
+"caso contrario, escriba á Free Software Foundation, Inc., 51 Franklin\n"
+"Street, Fifth Floor, Boston, MA 02111-1301, USA\n"
 
 #: gperiodic.h:105
 msgid "gperiodic homepage"
-msgstr ""
+msgstr "Páxina web do gperiodic"
 
 #: table_data.h:31
 msgid "Name: "
