--- a/po/pt.po
+++ b/po/pt.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gperiodic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-06-09 12:05+0400\n"
-"PO-Revision-Date: 2014-06-09 12:07+0300\n"
+"POT-Creation-Date: 2014-06-09 15:02+0400\n"
+"PO-Revision-Date: 2014-06-09 15:07+0300\n"
 "Last-Translator: AlexL <loginov.alex.valer@gmail.com>\n"
 "Language-Team: Portugese <pt@li.org>\n"
 "Language: pt\n"
@@ -181,7 +181,7 @@ msgstr "_A Sobre"
 #: gperiodic.c:338
 #: gperiodic.c:340
 msgid "About gperiodic"
-msgstr ""
+msgstr "Sobre o gperiodic"
 
 #: gperiodic.c:358
 msgid "GPeriodic"
@@ -249,12 +249,25 @@ msgid ""
 "\n"
 "You should have received a copy of the GNU General Public License\n"
 "along with this program; if not, write to the Free Software\n"
-"Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA\n"
+"Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA\n"
 msgstr ""
+"O gperiodic é uma aplicação livre; pode redistribuí-la e/ou alterá-la sob as\n"
+"condições da Licença Pública Genérica GNU tal como publicada pela Free\n"
+"Software Foundation; ou a versão 2 da Licença ou (à sua escolha) qualquer\n"
+"versão posterior.\n"
+"\n"
+"O gperiodic é distribuído na expectativa de que seja útil, mas SEM QUALQUER\n"
+"GARANTIA; sem mesmo a garantia implícita de COMERCIABILIDADE ou ADEQUAÇÃO A\n"
+"UM DETERMINADO PROPÓSITO. Consulte a Licença Pública Genérica GNU para mais\n"
+"detalhes.\n"
+"\n"
+"Deverá ter recebido uma cópia da Licença Pública Genérica GNU juntamente com\n"
+"o gperiodic; caso contrário, escreva para a Free Software Foundation, Inc., 51\n"
+"Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA (em inglês)\n"
 
 #: gperiodic.h:105
 msgid "gperiodic homepage"
-msgstr ""
+msgstr "Página Web do gperiodic"
 
 #: table_data.h:31
 msgid "Name: "
