--- a/po/ru.po
+++ b/po/ru.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gperiodic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-06-09 12:05+0400\n"
-"PO-Revision-Date: 2014-06-09 12:06+0300\n"
+"POT-Creation-Date: 2014-06-09 15:02+0400\n"
+"PO-Revision-Date: 2014-06-09 15:07+0300\n"
 "Last-Translator: AlexL <loginov.alex.valer@gmail.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "Language: ru\n"
@@ -268,7 +268,7 @@ msgid ""
 "\n"
 "You should have received a copy of the GNU General Public License\n"
 "along with this program; if not, write to the Free Software\n"
-"Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA\n"
+"Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA\n"
 msgstr ""
 "gperiodic - это свободная программа; вы можете распространять её\n"
 "и/или модифицировать в соответствии с лицензией\n"
@@ -283,7 +283,7 @@ msgstr ""
 "\n"
 "Вы должны были получить копию GNU General Public License\n"
 "с программой; если нет, то напишите в Free Software\n"
-"Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA\n"
+"Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA\n"
 
 #: gperiodic.h:105
 msgid "gperiodic homepage"
