- update Polish and Ukrainian
git-svn-id: http://svn.code.sf.net/p/gperiodic/code/trunk@25 0ad6494c-dd34-4e59-9d04-8dff0e227eb0

--- a/po/pl.po
+++ b/po/pl.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: gperiodic\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-06-09 15:02+0400\n"
-"PO-Revision-Date: 2014-06-09 15:07+0300\n"
+"PO-Revision-Date: 2014-06-09 16:12+0300\n"
 "Last-Translator: AlexL <loginov.alex.valer@gmail.com>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "Language: pl\n"
@@ -52,6 +52,11 @@ msgid ""
 "               display information on the element with the given element symbol or atomic number\n"
 "\n"
 msgstr ""
+"lub\n"
+"\n"
+"gperiodic [element_symbol | atomic_number]\n"
+"               wyświetl informacje na temat pierwiastka o podanym symbolu chemicznym lub liczbie atomowej\n"
+"\n"
 
 #: gperiodic.c:289
 #: gperiodic.c:290
