--- a/po/uk.po
+++ b/po/uk.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gperiodic\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-06-09 15:02+0400\n"
-"PO-Revision-Date: 2014-06-09 15:08+0300\n"
+"PO-Revision-Date: 2014-06-09 18:58+0300\n"
 "Last-Translator: AlexL <loginov.alex.valer@gmail.com>\n"
 "Language-Team: Ukrainian <ru@li.org>\n"
 "Language: uk\n"
@@ -50,6 +50,11 @@ msgid ""
 "               display information on the element with the given element symbol or atomic number\n"
 "\n"
 msgstr ""
+"або\n"
+"\n"
+"gperiodic [символ_елементу | номер]\n"
+"               показати інформацію про елемент за його символом або номером\n"
+"\n"
 
 #: gperiodic.c:289
 #: gperiodic.c:290
