- add Czech translation
git-svn-id: http://svn.code.sf.net/p/gperiodic/code/trunk@26 0ad6494c-dd34-4e59-9d04-8dff0e227eb0

--- a/AUTHORS
+++ b/AUTHORS
@@ -31,3 +31,4 @@ Ireneusz Imiolek <imiolek.i@googlemail.com>                           Polish tra
 Oleksandr Mishchenko <sasha.mishchenko@gmail.com>                     Ukrainian translation
 Juan Rafael Fernández                                                 Spanish translation
 Fırat Kutlu <firatkutlu@gmail.com>                                    Turkish translation
+Pavel Fric <pavelfric@seznam.cz>                                      Czech translation
