- update French translation
git-svn-id: http://svn.code.sf.net/p/gperiodic/code/trunk@27 0ad6494c-dd34-4e59-9d04-8dff0e227eb0

--- a/AUTHORS
+++ b/AUTHORS
@@ -32,3 +32,4 @@ Oleksandr Mishchenko <sasha.mishchenko@gmail.com>                     Ukrainian 
 Juan Rafael Fernández                                                 Spanish translation
 Fırat Kutlu <firatkutlu@gmail.com>                                    Turkish translation
 Pavel Fric <pavelfric@seznam.cz>                                      Czech translation
+Yves Brungard <yves.brungard_mageia@gadz.org>                         French translation
