--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,7 @@
    Update Spanish translation (Juan Rafael Fernández)
    Update Turkish translation (Fırat Kutlu)
    Add Czech translation (Pavel Fric)
+   Update French translation (Yves Brungard)
 
 2.0.10 Jul 11 2007
    Minor code update & include translations
