- fix French translation
git-svn-id: http://svn.code.sf.net/p/gperiodic/code/trunk@28 0ad6494c-dd34-4e59-9d04-8dff0e227eb0

--- a/po/fr.po
+++ b/po/fr.po
@@ -412,7 +412,7 @@ msgstr "Nommé après : "
 
 #: table_data.h:147
 msgid "Hydrogen"
-msgstr "Hydrogène : "
+msgstr "Hydrogène"
 
 #: table_data.h:147
 msgid "0.0708 (@ -253&#176;C)"
