- fix Russian and Czech
git-svn-id: http://svn.code.sf.net/p/gperiodic/code/trunk@29 0ad6494c-dd34-4e59-9d04-8dff0e227eb0

--- a/po/ru.po
+++ b/po/ru.po
@@ -236,7 +236,7 @@ msgid ""
 "\n"
 msgstr ""
 "\n"
-" Неизвестный элемент: %s.  Завершение работы.\n"
+" Неизвестный элемент: %s. Завершение работы.\n"
 "\n"
 
 #: gperiodic.c:535
@@ -247,7 +247,7 @@ msgid ""
 "\n"
 msgstr ""
 "\n"
-" Номер элемента превосходит количество доступных.  Завершение работы.\n"
+" Номер элемента превосходит количество доступных. Завершение работы.\n"
 "\n"
 
 #: gperiodic.h:102
@@ -2014,7 +2014,7 @@ msgstr "Смитсон Тенант, Антуан де Фукруа, Луи-Ни
 
 #: table_data.h:230
 msgid "Greek: iris (rainbow)"
-msgstr "греч. iris (радуга)"
+msgstr "греч. ирис (радуга)"
 
 #: table_data.h:231
 msgid "Platinum"
