--- a/AUTHORS
+++ b/AUTHORS
@@ -33,3 +33,4 @@ Juan Rafael Fernández                                                 Spanish t
 Fırat Kutlu <firatkutlu@gmail.com>                                    Turkish translation
 Pavel Fric <pavelfric@seznam.cz>                                      Czech translation
 Yves Brungard <yves.brungard_mageia@gadz.org>                         French translation
+Marcio Padula <padula1000@gmail.com>                                  Brazilian Portuguese translation
