--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-3.0.0 Jun 11 2014
+3.0.0 Jun 23 2014
    Update authors and changelog
    Fix i18n and update all translations
    Fix many erratum (Michael Shigorin and Alexey Loginov)
@@ -20,6 +20,7 @@
    Update Turkish translation (Fırat Kutlu)
    Add Czech translation (Pavel Fric)
    Update French translation (Yves Brungard)
+   Add Brazilian Portuguese translation (Marcio Padula)
 
 2.0.10 Jul 11 2007
    Minor code update & include translations
