- add Belarusian translation
git-svn-id: http://svn.code.sf.net/p/gperiodic/code/trunk@32 0ad6494c-dd34-4e59-9d04-8dff0e227eb0

--- a/AUTHORS
+++ b/AUTHORS
@@ -34,3 +34,4 @@ Fırat Kutlu <firatkutlu@gmail.com>                                    Turkish t
 Pavel Fric <pavelfric@seznam.cz>                                      Czech translation
 Yves Brungard <yves.brungard_mageia@gadz.org>                         French translation
 Marcio Padula <padula1000@gmail.com>                                  Brazilian Portuguese translation
+Uladyslau Ahromenka <ahromenka@gmail.com>                             Belarusian translation
