--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-3.0.0 Jun 23 2014
+3.0.0 Jun 24 2014
    Update authors and changelog
    Fix i18n and update all translations
    Fix many erratum (Michael Shigorin and Alexey Loginov)
@@ -21,6 +21,7 @@
    Add Czech translation (Pavel Fric)
    Update French translation (Yves Brungard)
    Add Brazilian Portuguese translation (Marcio Padula)
+   Add Belarusian translation (Uladyslau Ahromenka)
 
 2.0.10 Jul 11 2007
    Minor code update & include translations
