- update Danish translation
git-svn-id: http://svn.code.sf.net/p/gperiodic/code/trunk@33 0ad6494c-dd34-4e59-9d04-8dff0e227eb0

--- a/AUTHORS
+++ b/AUTHORS
@@ -21,7 +21,7 @@ Theppitak Karoonboonyanan <thep@linux.thai.net>                       patches
 Zach Ploskey <zploskey@gmail.com>                                     patches from his fork of gperiodic
 Jon Abbott <?>                                                        provided updates to the table
 Andrew Dalke <?>                                                      corrected errors in the table
-Gunner Poulsen <?>                                                    Dansk translation
+Gunner Poulsen <?>                                                    Danish translation
 Gonzalo Regueiro Iglesias <gonzalo.regueiro.iglesias@gmail.com>       Galician translation
 Leandro Regueiro <leandro.regueiro@gmail.com>                         Galician translation
 Andrea Tasso <andrea@tasso.info>                                      Italian translation
@@ -35,3 +35,4 @@ Pavel Fric <pavelfric@seznam.cz>                                      Czech tran
 Yves Brungard <yves.brungard_mageia@gadz.org>                         French translation
 Marcio Padula <padula1000@gmail.com>                                  Brazilian Portuguese translation
 Uladyslau Ahromenka <ahromenka@gmail.com>                             Belarusian translation
+Rémi Verschelde <akien@mageia.org>                                    Danish translation
