--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,7 @@
    Update French translation (Yves Brungard)
    Add Brazilian Portuguese translation (Marcio Padula)
    Add Belarusian translation (Uladyslau Ahromenka)
+   Update Danish translation (Rémi Verschelde)
 
 2.0.10 Jul 11 2007
    Minor code update & include translations
