--- a/po/da.po
+++ b/po/da.po
@@ -2,20 +2,21 @@
 # Copyright (C) 2003-2014 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gperiodic package.
 # Gunner Poulsen <?>, 2003.
+# Rémi Verschelde <akien@mageia.org>, 2014.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gperiodic\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-06-09 15:02+0400\n"
-"PO-Revision-Date: 2014-06-09 15:03+0300\n"
-"Last-Translator: AlexL <loginov.alex.valer@gmail.com>\n"
+"PO-Revision-Date: 2014-06-24 18:43+0100\n"
+"Last-Translator: Rémi Verschelde <akien@mageia.org>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
 "Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.0.2\n"
+"X-Generator: Poedit 1.5.7\n"
 
 #: gperiodic.c:194
 #, c-format
@@ -40,7 +41,7 @@ msgstr ""
 "    -c <Temp>  farvelæg grundstofferne efter deres tilstandsform\n"
 "               ved temperaturen  <Temp> i Kelvin\n"
 "    -D         dump det periodiske system\n"
-"    -v         be verbose\n"
+"    -v         verbose tilstand\n"
 "\n"
 
 #: gperiodic.c:203
@@ -52,6 +53,11 @@ msgid ""
 "               display information on the element with the given element symbol or atomic number\n"
 "\n"
 msgstr ""
+"eller\n"
+"\n"
+"gperiodic [element_symbol | atomnummer]\n"
+"               vis oplysninger om elementet med det givne element symbol eller atomnummer\n"
+"\n"
 
 #: gperiodic.c:289
 #: gperiodic.c:290
@@ -1283,7 +1289,7 @@ msgstr "Rubidium"
 
 #: table_data.h:187
 msgid "Soft, silvery-white, highly reactive metal"
-msgstr ""
+msgstr "Blødt, sølvhvidt, meget reaktivt metal"
 
 #: table_data.h:187
 msgid "1861 (Germany)"
@@ -1720,7 +1726,7 @@ msgstr "(+3e)97.9 eller (+3e)111"
 
 #: table_data.h:213
 msgid "Light-grey, radioactive element"
-msgstr ""
+msgstr "Lysegråt, radioaktivt grundstof"
 
 #: table_data.h:213
 msgid "1945 (United States)"
@@ -2021,7 +2027,7 @@ msgstr "Meget tungt, blødt, sølvhvidt metal"
 
 #: table_data.h:231
 msgid "1557 (Italy), but Incas use before"
-msgstr ""
+msgstr "1557 (Italien), men inkaerne har brugt det før"
 
 #: table_data.h:231
 msgid "Julius Scaliger"
@@ -2402,7 +2408,7 @@ msgstr "1952 (USA)"
 #: table_data.h:254
 #: table_data.h:255
 msgid "Argonne, Los Alamos, University of California"
-msgstr ""
+msgstr "Argonne, Los Alamos, University of California"
 
 #: table_data.h:254
 msgid "Named in honor of the scientist Albert Einstein"
@@ -2457,7 +2463,7 @@ msgstr "1961 (USSR/USA)"
 #: table_data.h:261
 #: table_data.h:262
 msgid "Soviet Nuclear Research/University of California at Berkeley"
-msgstr ""
+msgstr "Sovjetiske atomforskning/University of California i Berkeley"
 
 #: table_data.h:259
 msgid "Named in honor of Ernest Orlando Lawrence, inventor of the cyclotron"
@@ -2485,7 +2491,7 @@ msgstr "1970 (USSR/USA)"
 
 #: table_data.h:261
 msgid "Named after the science-town Dubna in Russia"
-msgstr "Dubna (Rusland)"
+msgstr "Opkaldt efter forskningsbyen Dubna i Rusland"
 
 #: table_data.h:262
 msgid "Seaborgium"
@@ -2607,7 +2613,7 @@ msgstr "1998 (Rusland/USA)"
 
 #: table_data.h:270
 msgid "Named in honor of Soviet physicist Flerov"
-msgstr "Opkaldt efter Flerov Laboratory of Nuclear Reactions (Dubna, Rusland)"
+msgstr "Opkaldt efter den sovjetiske fysiker Flerov"
 
 #: table_data.h:271
 msgid "Ununpentium"
@@ -2631,7 +2637,7 @@ msgstr "2000 (Rusland/USA)"
 
 #: table_data.h:272
 msgid "Dubna, Dimitrovgrad, Lesnoy/Livermore"
-msgstr ""
+msgstr "Dubna, Dimitrovgrad, Lesnoy/Livermore"
 
 #: table_data.h:272
 msgid "Named in honor of Livermore National Laboratory (USA)"
