- update French translation
git-svn-id: http://svn.code.sf.net/p/gperiodic/code/trunk@34 0ad6494c-dd34-4e59-9d04-8dff0e227eb0

--- a/AUTHORS
+++ b/AUTHORS
@@ -36,3 +36,4 @@ Yves Brungard <yves.brungard_mageia@gadz.org>                         French tra
 Marcio Padula <padula1000@gmail.com>                                  Brazilian Portuguese translation
 Uladyslau Ahromenka <ahromenka@gmail.com>                             Belarusian translation
 Rémi Verschelde <akien@mageia.org>                                    Danish translation
+André-Marie Desmottes <lebarhon@free.fr>                              French translation
