--- a/ChangeLog
+++ b/ChangeLog
@@ -19,7 +19,7 @@
    Update Spanish translation (Juan Rafael Fernández)
    Update Turkish translation (Fırat Kutlu)
    Add Czech translation (Pavel Fric)
-   Update French translation (Yves Brungard)
+   Update French translation (Yves Brungard and André-Marie Desmottes)
    Add Brazilian Portuguese translation (Marcio Padula)
    Add Belarusian translation (Uladyslau Ahromenka)
    Update Danish translation (Rémi Verschelde)
