- update German translation
git-svn-id: http://svn.code.sf.net/p/gperiodic/code/trunk@36 0ad6494c-dd34-4e59-9d04-8dff0e227eb0

--- a/AUTHORS
+++ b/AUTHORS
@@ -37,3 +37,4 @@ Marcio Padula <padula1000@gmail.com>                                  Brazilian 
 Uladyslau Ahromenka <ahromenka@gmail.com>                             Belarusian translation
 Rémi Verschelde <akien@mageia.org>                                    Danish translation
 André-Marie Desmottes <lebarhon@free.fr>                              French translation
+Marc Lattemann <marc.lattemann@web.de>                                German translation
