--- a/po/fr.po
+++ b/po/fr.po
@@ -1957,7 +1957,7 @@ msgid "Juan Jose, Fausto Elhuyar"
 msgstr "Juan Jose, Fausto Elhuyar"
 
 #: table_data.h:227
-msgid "Swedish: tung sten (heavy stone): symbol from its German name wolfram"
+msgid "Swedish: tung sten (heavy stone); symbol from its German name wolfram"
 msgstr "'Tung sten' means 'heavy stone' in Swedish; le symbole provient du nom allemand \"wolfram\""
 
 #: table_data.h:228
