--- a/po/nl.po
+++ b/po/nl.po
@@ -1920,7 +1920,7 @@ msgid "Juan Jose, Fausto Elhuyar"
 msgstr ""
 
 #: table_data.h:227
-msgid "Swedish: tung sten (heavy stone): symbol from its German name wolfram"
+msgid "Swedish: tung sten (heavy stone); symbol from its German name wolfram"
 msgstr "'Tung sten' betekent 'zware steen' in het Zweeds"
 
 #: table_data.h:228
