--- a/po/tr.po
+++ b/po/tr.po
@@ -1954,7 +1954,7 @@ msgid "Juan Jose, Fausto Elhuyar"
 msgstr "Juan Jose, Fausto Elhuyar"
 
 #: table_data.h:227
-msgid "Swedish: tung sten (heavy stone): symbol from its German name wolfram"
+msgid "Swedish: tung sten (heavy stone); symbol from its German name wolfram"
 msgstr "İsveçli: tung sten (ağır taş)"
 
 #: table_data.h:228
