--- a/po/da.po
+++ b/po/da.po
@@ -1954,7 +1954,7 @@ msgid "Juan Jose, Fausto Elhuyar"
 msgstr "Juan Jose, Fausto Elhuyar"
 
 #: table_data.h:227
-msgid "Swedish: tung sten (heavy stone): symbol from its German name wolfram"
+msgid "Swedish: tung sten (heavy stone); symbol from its German name wolfram"
 msgstr "Tysk navn: wolfram; betyder ulvesten, dvs. ætsende sod"
 
 #: table_data.h:228
