--- a/po/de.po
+++ b/po/de.po
@@ -1778,7 +1778,7 @@ msgid "Juan Jose, Fausto Elhuyar"
 msgstr "Juan Jose, Fausto Elhuyar"
 
 #: table_data.h:227
-msgid "Swedish: tung sten (heavy stone): symbol from its German name wolfram"
+msgid "Swedish: tung sten (heavy stone); symbol from its German name wolfram"
 msgstr "„Tung sten“ bedeutet „schwerer Stein“ auf Schwedisch"
 
 #: table_data.h:228
