--- a/po/pl.po
+++ b/po/pl.po
@@ -1954,8 +1954,8 @@ msgid "Juan Jose, Fausto Elhuyar"
 msgstr "Juan Jose, Fausto Elhuyar"
 
 #: table_data.h:227
-msgid "Swedish: tung sten (heavy stone): symbol from its German name wolfram"
-msgstr "Szwedzki: tung sten (ciężki kamień): symbol od niemieckien nazwy wolfram"
+msgid "Swedish: tung sten (heavy stone); symbol from its German name wolfram"
+msgstr "Szwedzki: tung sten (ciężki kamień); symbol od niemieckien nazwy wolfram"
 
 #: table_data.h:228
 msgid "Rhenium"
