--- a/po/pt.po
+++ b/po/pt.po
@@ -1952,7 +1952,7 @@ msgid "Juan Jose, Fausto Elhuyar"
 msgstr ""
 
 #: table_data.h:227
-msgid "Swedish: tung sten (heavy stone): symbol from its German name wolfram"
+msgid "Swedish: tung sten (heavy stone); symbol from its German name wolfram"
 msgstr "'Tung sten' significa 'pedra pesada' em Sueco"
 
 #: table_data.h:228
