--- a/po/ru.po
+++ b/po/ru.po
@@ -1953,7 +1953,7 @@ msgid "Juan Jose, Fausto Elhuyar"
 msgstr "Хуан Хосе, Фаусто Эльгуяр"
 
 #: table_data.h:227
-msgid "Swedish: tung sten (heavy stone): symbol from its German name wolfram"
+msgid "Swedish: tung sten (heavy stone); symbol from its German name wolfram"
 msgstr "нем. wolfram (волчья пена), минерал вольфрамит"
 
 #: table_data.h:228
