--- a/po/sv.po
+++ b/po/sv.po
@@ -1946,7 +1946,7 @@ msgid "Juan Jose, Fausto Elhuyar"
 msgstr "Juan Jose, Fausto Elhuyar"
 
 #: table_data.h:227
-msgid "Swedish: tung sten (heavy stone): symbol from its German name wolfram"
+msgid "Swedish: tung sten (heavy stone); symbol from its German name wolfram"
 msgstr "Svenska: tung sten; symbolen från dess tyska namn: wolfram"
 
 #: table_data.h:228
