--- a/po/uk.po
+++ b/po/uk.po
@@ -1952,7 +1952,7 @@ msgid "Juan Jose, Fausto Elhuyar"
 msgstr "Хуан Хосе, Фаусто Ельгуяр"
 
 #: table_data.h:227
-msgid "Swedish: tung sten (heavy stone): symbol from its German name wolfram"
+msgid "Swedish: tung sten (heavy stone); symbol from its German name wolfram"
 msgstr "нім. wolfram (вовча піна), мінерал вольфраміт"
 
 #: table_data.h:228
