- update Swedish translation
git-svn-id: http://svn.code.sf.net/p/gperiodic/code/trunk@39 0ad6494c-dd34-4e59-9d04-8dff0e227eb0

--- a/AUTHORS
+++ b/AUTHORS
@@ -38,3 +38,4 @@ Uladyslau Ahromenka <ahromenka@gmail.com>                             Belarusian
 Rémi Verschelde <akien@mageia.org>                                    Danish translation
 André-Marie Desmottes <lebarhon@free.fr>                              French translation
 Marc Lattemann <marc.lattemann@web.de>                                German translation
+Michael Eklund <willard@null.net>                                     Swedish translation
