--- a/ChangeLog
+++ b/ChangeLog
@@ -24,6 +24,7 @@
    Add Belarusian translation (Uladyslau Ahromenka)
    Update Danish translation (Rémi Verschelde)
    Update German translation (Marc Lattemann)
+   Update Swedish translation (Michael Eklund)
 
 2.0.10 Jul 11 2007
    Minor code update & include translations
