--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+3.0.1 Dec 5 2014
+   Update desktop file
+
 3.0.0 Jun 25 2014
    Update authors and changelog
    Fix i18n and update all translations
